# openstreetmap-cgimap

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .iwyu_mappings.imp  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Dockerfile2204  Dockerfile_bookworm  Dockerfile_trixie  Makefile  Makefile.am  README  Readme.md  Vagrantfile  autogen.sh  configure.ac  lighttpd.conf  openstreetmap-cgimap.1
benchmark/: CMakeLists.txt  benchmark.cpp
contrib/: CMakeLists.txt
contrib/Catch2/: README.contrib
contrib/catch2/: CMakeLists.txt  README.contrib
contrib/libxml++/: CMakeLists.txt  README.contrib
contrib/sjparser/: .clang-format  .gitlab-ci.yml  CMakeLists.txt  COPYING  README.contrib  Readme.md
src/: CMakeLists.txt  Makefile.am  amf.cpp  backend.cpp  basicauth.cpp  bbox.cpp  brotli.cpp  changeset.cpp  choose_formatter.cpp  data_selection.cpp  diffresult_responder.cpp  empty_responder.cpp  fcgi_helpers.cpp  fcgi_request.cpp  handler.cpp  http.cpp  json_factory.cpp  json_formatter.cpp  json_writer.cpp  logger.cpp  main.cpp  map.cpp  map_handler.cpp  mime_types.cpp  node_handler.cpp  nodes_handler.cpp  oauth.cpp  oauth2.cpp  options.cpp  osm_changeset_responder.cpp  osm_current_responder.cpp  osm_diffresult_responder.cpp  osm_helpers.cpp  osm_responder.cpp  osmchange_responder.cpp  output_formatter.cpp  output_writer.cpp  process_request.cpp  quad_tile.cpp  rate_limiter.cpp  (+21 more)
src/api06/: changeset_close_handler.cpp  changeset_create_handler.cpp  changeset_download_handler.cpp  changeset_handler.cpp  changeset_update_handler.cpp  changeset_upload_handler.cpp  handler_utils.cpp  id_version_io.cpp  map_handler.cpp  node_create_handler.cpp  node_handler.cpp  node_history_handler.cpp  node_relations_handler.cpp  node_version_handler.cpp  node_ways_handler.cpp  nodes_handler.cpp  relation_full_handler.cpp  relation_handler.cpp  relation_history_handler.cpp  relation_relations_handler.cpp  relation_version_handler.cpp  relations_handler.cpp  way_full_handler.cpp  way_handler.cpp  way_history_handler.cpp  way_relations_handler.cpp  way_version_handler.cpp  ways_handler.cpp
src/api07/: map_handler.cpp
src/parsers/: exception.cc  exception.cpp  internal_error.cc  parse_error.cc  parser.cc  parser.cpp  saxparser.cc  saxparser.cpp  wrapped_exception.cc  wrapped_exception.cpp
test/: CMakeLists.txt  staticxml.cpp  staticxml.hpp  structure.sql  test-single.sh  test.sh  test_anon.rb  test_apidb_backend.cpp  test_apidb_backend.sql  test_apidb_backend_changeset_downloads.cpp  test_apidb_backend_changeset_uploads.cpp  test_apidb_backend_changesets.cpp  test_apidb_backend_core.cpp  test_apidb_backend_disable_write.cpp  test_apidb_backend_historic.cpp  test_apidb_backend_node_changes.cpp  test_apidb_backend_nodes.cpp  test_apidb_backend_oauth.cpp  test_apidb_backend_oauth2.cpp  test_apidb_backend_roles.cpp  test_apidb_importer.cpp  test_apidb_importer.hpp  test_basicauth.cpp  test_core.cpp  test_core_check.cpp  test_core_helper.cpp  test_core_helper.hpp  test_database.cpp  test_database.hpp  test_empty.rb  test_empty_selection.hpp  test_formatter.cpp  test_formatter.hpp  test_functions.rb  test_http.cpp  test_json.rb  test_map.osm  test_map.rb  test_map_relations.osm  test_map_ways.osm  (+27 more)
test/anon.testcore/: data.osm  single_node.case
test/changesets.testcore/: create_changeset_incorrect_method.case  data.osm  download.case  download_changeset_2.case  download_changeset_4.case  download_changeset_rel10.case  download_changeset_sort11.case  download_changeset_way6.case  download_changeset_way7.case  download_changeset_way9.case  download_changeset_way_inject_db_error.case  download_not_acceptable.case  empty.case  not_found.case  read.case  read_discussion.case  read_discussion_json.case  read_discussion_multiple.case  read_discussion_multiple_json.case  read_json.case  read_nonpublic.case  read_open.case  upload_changeset_incorrect_method.case
test/empty.testcore/: accept_any.case  accept_any_any.case  accept_application_xml.case  accept_josm_nonsense.case  accept_nil.case  accept_text_any.case  accept_text_xml.case  changeset_upload_options.case  cors_preflight.case  data.osm  http_origin.case
test/json.testcore/: data.osm  map_all.case  node_1 inject_db_error.case  node_1.case  node_2.case  regression_double_truncated.case
test/map.testcore/: bad_bbox_001.case  bad_bbox_002.case  bad_bbox_003.case  bad_bbox_004.case  bad_bbox_005.case  bad_bbox_006.case  bad_bbox_007.case  bad_bbox_008.case  bad_bbox_009.case  data.osm  empty_response.case  method_not_allowed.case  multiple_node.case  single_node.case  too_many_nodes.case  used_node.case  used_way.case
test/message.testcore/: data.osm  map_400.case  map_400_xml.case  node_404.case  node_404_xml.case
test/node.testcore/: data.osm  large_id_1.case  large_id_2.case  node_1.case  node_2.case  node_2_xml.case  node_3.case  node_4.case  node_accept_unknown.case  node_conflicting_header.case  node_five.case  node_history.case  node_history_404.case  node_invalid_method_1.case  node_invalid_method_2.case  node_options_method.case  node_version.case  node_version_deleted.case  node_version_missing.case  nodes.case  nodes_dup.case  nodes_dup2.case  nodes_empty.case  nodes_history.case  nodes_history_dup.case  nodes_missing.case  nodes_negative.case  nodes_non_numeric.case
test/node_relations.testcore/: data.osm  node_1.case  node_2.case
test/node_ways.testcore/: node_1.case  node_2.case  node_4.case  node_5.case  node_five.case
test/redactions.testcore/: changeset_download.case  changeset_download_moderator.case  data.osm  node_history.case  node_history_moderator.case  node_version.case  node_version_moderator.case  nodes.case  nodes_moderator.case  oauth.json  oauth2.json  relation_history.case  relation_history_moderator.case  relation_version.case  relation_version_moderator.case  relations.case  relations_moderator.case  roles.json  way_history.case  way_history_moderator.case  way_version.case  way_version_moderator.case  ways.case  ways_moderator.case
test/relation.testcore/: data.osm  large_id_1.case  (+16 more)
(+359 files in other folders)
